...

  <Spinner
      android:id="@+id/input_year"
      android:layout_width="126dp"
      android:layout_height="48dp"
      android:layout_marginBottom="76dp"
      app:layout_constraintBottom_toTopOf="@+id/add_course_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.217"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/input_subject"
      android:layout_width="71dp"
      android:layout_height="38dp"
      android:layout_marginBottom="20dp"
      android:ems="5"
      android:hint="Subject"
      android:inputType="text"
...
      app:layout_constraintBottom_toTopOf="@+id/add_course_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.085"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/input_course_number"
      android:layout_width="71dp"
      android:layout_height="38dp"
      android:layout_marginBottom="20dp"
      android:ems="5"
      android:hint="Course #"
      android:inputType="text"
...
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:onClick="onAddCourseClicked"
      android:text="Add Course"
      app:layout_constraintBottom_toTopOf="@+id/done_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/done_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:onClick="onDoneClicked"
      android:text="Done"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Spinner
      android:id="@+id/input_size"
...
