...
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_your_name">Confirm your name:</string>
    <string name="autofilled_name">Michael Bay</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="photo_url_hint">Enter your photo URL</string>
    <string name="choose_a_profile_photo">Choose a profile photo</string>
    <string name="default_photo_url">https://commons.wikimedia.org/wiki/File:Default_pfp.jpg</string>
    <string-array name="quarters_array">
        <item>SSS</item>
        <item>SS2</item>
...
        <item>common classes</item>
        <item>recent</item>
        <item>small classes</item>
    </string-array>
    <string name="confirm_mocked_student">Confirm mocked student</string>
    <string name="hint_student_csv">Enter name,photo url, and classes as csv</string>
    <string name="start_searching">Start Searching</string>
    <string name="stop_searching">Stop Searching</string>
    <string name="mock_students">Mock Students</string>
    <string name="go_back">Go Back</string>
    <string name="wave_on">wave on</string>
    <string name="wave_off">wave off</string>
    <string name="wave_sent">\"Wave sent!\"</string>
    <string name="student_photo">Student Photo</string>
</resources>
